<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar">

        <TextView
            android:id="@+id/confirmation_text"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/confirmation_cheat"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/confirmation_info_text"
            android:layout_width="299dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/confirmation_info_cheat" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/yesButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:onClick="onYesButtonClicked"
                android:text="@string/yes_cheat_button_text"
                android:textColor="#FFFF" />

            <Space
                android:layout_width="30dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/noButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:onClick="onNoButtonClicked"
                android:text="@string/no_cheat_button_text"
                android:textColor="#FFFF" />
        </LinearLayout>

        <Space
            android:layout_width="10dp"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/answer_text"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="center"
            android:text="@string/empty_string"
            tools:text="@string/empty_string" />

        <Space
            android:layout_width="30dp"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/returnButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/button_selector"
            android:onClick="onReturnToQuestionButtonClicked"
            android:text="@string/return_to_question_button_text"
            android:textColor="#FFFF" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>