...
            android:layout_height="228dp"
            android:layout_gravity="center"
            android:contentDescription="@string/gold_medal_description"
            app:srcCompat="@drawable/gold_medal" />

        <TextView
            android:id="@+id/earned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/earned_display"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#000000"
...
